<resources>
    <string name="app_name">Weather forecast</string>
    <string name="dark_mode_switch">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="byName">Search By Name</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="search">search</string>
    <string name="cityName">City</string>
    <string name="dark">Enter Dark Mode</string>
    <string name="wind_speed">wind speed</string>
    <string name="_32_km">32 km</string>
    <string name="todo">TODO</string>
</resources>