<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/city_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/cityName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/latitude_txt"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/latitude"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#757575"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/longitude_txt"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/longitude"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#757575"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/latitude_txt"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/byName_rbtn"
            android:layout_width="158dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/byName"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitude_txt" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="98dp"
            android:layout_height="48dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:text="@string/search"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/longitude_txt"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>